--- a/init/Kconfig
+++ b/init/Kconfig
@@ -136,6 +136,7 @@ config ZENIFY
 	  --- Virtual Memory Subsystem ---------------------------
 
 	    Background-reclaim hugepages...:   no   ->   yes
+	    Compact Unevictable............:   1    ->   0
 
 	  --- CFS CPU Scheduler ----------------------------------
 
