fedora_defconfig: enable RT_SOFTIRQ_AWARE_SCHED
- Recently I have been facing lots of audio glitches, similar
  patches downstream have helped in fixing this issue, so lets
  give it a try.

Signed-off-by: Dark-Matter7232 <me@const.eu.org>

--- a/arch/x86/configs/fedora_defconfig
+++ b/arch/x86/configs/fedora_defconfig
@@ -22,6 +22,7 @@ CONFIG_NAMESPACES=y
 CONFIG_USER_NS=y
 CONFIG_CHECKPOINT_RESTORE=y
 CONFIG_SCHED_AUTOGROUP=y
+CONFIG_RT_SOFTIRQ_AWARE_SCHED=y
 CONFIG_BOOT_CONFIG=y
 # CONFIG_INITRAMFS_PRESERVE_MTIME is not set
 CONFIG_EXPERT=y
