--- a/arch/x86/configs/arch_defconfig
+++ b/arch/x86/configs/arch_defconfig
@@ -129,6 +129,9 @@ CONFIG_MODULES=y
 CONFIG_MODULE_UNLOAD=y
 CONFIG_MODULE_UNLOAD_TAINT_TRACKING=y
 CONFIG_MODULE_SIG=y
+CONFIG_MODULE_COMPRESS_ZSTD=y
+CONFIG_MODULE_COMPRESS_ZSTD_LEVEL=5
+CONFIG_MODULE_DECOMPRESS=y
 CONFIG_MODPROBE_PATH="/usr/sbin/modprobe"
 CONFIG_BLK_DEV_ZONED=y
 CONFIG_BLK_SED_OPAL=y
