arch_defconfig: enable LTO_CLANG_FULL
Signed-off-by: Dark-Matter7232 <me@const.eu.org>

--- a/arch/x86/configs/arch_defconfig
+++ b/arch/x86/configs/arch_defconfig
@@ -124,6 +124,7 @@ CONFIG_KVM_XEN=y
 CONFIG_KPROBES=y
 CONFIG_JUMP_LABEL=y
 # CONFIG_STACKPROTECTOR_STRONG is not set
+CONFIG_LTO_CLANG_FULL=y
 # CONFIG_RANDOMIZE_KSTACK_OFFSET is not set
 CONFIG_MODULES=y
 CONFIG_MODULE_UNLOAD=y
