--- a/arch/x86/configs/arch_defconfig
+++ b/arch/x86/configs/arch_defconfig
@@ -1,6 +1,7 @@
 CONFIG_UAPI_HEADER_TEST=y
 # CONFIG_LOCALVERSION_AUTO is not set
-CONFIG_BUILD_SALT="6.1.0-65.CosmicFresh.fc36.x86_64"
+CONFIG_LOCALVERSION="-CosmicFresh"
+CONFIG_BUILD_SALT="6.1.12x86_64"
 CONFIG_KERNEL_ZSTD=y
 CONFIG_SYSVIPC=y
 CONFIG_POSIX_MQUEUE=y
